# MNN-LaneNet

./: CMakeLists.txt  README.md  lane_detect.cpp
MNN/include/: AutoTime.hpp  MNNDefine.h
checkpoint/: convert_ckpt_into_mnn_model.sh
source/common/config_parse_utils/: config_parser.cpp  config_parser.h
source/lanenet/: lanenet_model.cpp  lanenet_model.h
source/postprocess/: dbscan.hpp
tools/: freeze_lanenet_model.py
